fixed bug in MaxEnt forward that screwed up batch prediction

--- a/cbow_preprocessing.ipynb
+++ b/cbow_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,10 +151,9 @@
     "\n",
     "    # Remove stop words\n",
     "    stop_words = set(stopwords.words('english'))\n",
-    "    print(stop_words)\n",
     "    punctuation = set(string.punctuation)\n",
-    "    remove = stop_words.update(punctuation)\n",
-    "    document = list(filter(lambda x: x not in remove, document))\n",
+    "    stop_words.update(punctuation)\n",
+    "    document = list(filter(lambda x: x not in stop_words, document))\n",
     "\n",
     "    # [I, am, 34] -> [I, am, thirty, four]\n",
     "    document = digits_to_text(document)\n",
@@ -258,7 +257,7 @@
     "\n",
     "torch.manual_seed(1)\n",
     "# dialog_data = DialogDataset(os.path.join(*SAMPLE_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
-    "dialog_data = DialogDataset(os.path.join(*EASY_1000), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
+    "dialog_data = DialogDataset(os.path.join(*TRAIN_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "valid_data = DialogDataset(os.path.join(*VAL_200), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "\n",
     "vocab_size = len(dialog_data.vocab)\n",
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -305,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,24 +334,16 @@
     "        return Variable(inputs), Variable(targets)\n",
     "        \n",
     "    def forward(self, inp, batchSize=1):\n",
-    "        scores = self.linear(inp)\n",
-    "        scores = self.softmax(scores.transpose(0, 1))\n",
+    "        scores = self.linear(inp).view(batchSize, -1)\n",
+    "        scores = self.softmax(scores)\n",
     "        return scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no no\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TEXT_DIM = 512\n",
     "\n",
@@ -374,20 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.2961387991905213"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def validate(model, data, loss_func):\n",
     "    total_loss = 0\n",
@@ -433,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,161 +451,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we have: 1000 dialogs, batch size of 30 with 40 as remainder to offset batches each epoch\n",
-      "Logging enabled in: test_top1_top2-t_size_1000-v_size_201-emb_50-eps_100-dt_12-15-23-25-batch_30.txt\n",
-      "6.3s:\t Finished epoch. Calculating test error..\n",
-      "6.3s:\t test error: 2.291044\n",
-      "saved\t maxent_30batch_2epc.pt\n",
-      "12.5s:\t Finished epoch. Calculating test error..\n",
-      "12.5s:\t test error: 2.285549\n",
-      "saved\t maxent_30batch_3epc.pt\n",
-      "18.8s:\t Finished epoch. Calculating test error..\n",
-      "18.8s:\t test error: 2.280415\n",
-      "saved\t maxent_30batch_4epc.pt\n",
-      "26.0s:\t Finished epoch. Calculating test error..\n",
-      "26.0s:\t test error: 2.275568\n",
-      "saved\t maxent_30batch_5epc.pt\n",
-      "33.2s:\t Finished epoch. Calculating test error..\n",
-      "33.2s:\t test error: 2.271043\n",
-      "saved\t maxent_30batch_6epc.pt\n",
-      "40.2s:\t Finished epoch. Calculating test error..\n",
-      "40.2s:\t test error: 2.266849\n",
-      "saved\t maxent_30batch_7epc.pt\n",
-      "47.2s:\t Finished epoch. Calculating test error..\n",
-      "47.2s:\t test error: 2.262869\n",
-      "saved\t maxent_30batch_8epc.pt\n",
-      "54.5s:\t Finished epoch. Calculating test error..\n",
-      "54.5s:\t test error: 2.259116\n",
-      "saved\t maxent_30batch_9epc.pt\n",
-      "61.6s:\t Finished epoch. Calculating test error..\n",
-      "61.6s:\t test error: 2.255564\n",
-      "saved\t maxent_30batch_10epc.pt\n",
-      "68.6s:\t Finished epoch. Calculating test error..\n",
-      "68.6s:\t test error: 2.252228\n",
-      "saved\t maxent_30batch_11epc.pt\n",
-      "75.7s:\t Finished epoch. Calculating test error..\n",
-      "75.7s:\t test error: 2.249102\n",
-      "saved\t maxent_30batch_12epc.pt\n",
-      "82.6s:\t Finished epoch. Calculating test error..\n",
-      "82.6s:\t test error: 2.246164\n",
-      "saved\t maxent_30batch_13epc.pt\n",
-      "89.4s:\t Finished epoch. Calculating test error..\n",
-      "89.4s:\t test error: 2.243392\n",
-      "saved\t maxent_30batch_14epc.pt\n",
-      "96.1s:\t Finished epoch. Calculating test error..\n",
-      "96.1s:\t test error: 2.240768\n",
-      "saved\t maxent_30batch_15epc.pt\n",
-      "102.8s:\t Finished epoch. Calculating test error..\n",
-      "102.8s:\t test error: 2.238320\n",
-      "saved\t maxent_30batch_16epc.pt\n",
-      "109.7s:\t Finished epoch. Calculating test error..\n",
-      "109.7s:\t test error: 2.236046\n",
-      "saved\t maxent_30batch_17epc.pt\n",
-      "117.4s:\t Finished epoch. Calculating test error..\n",
-      "117.4s:\t test error: 2.233879\n",
-      "saved\t maxent_30batch_18epc.pt\n",
-      "124.7s:\t Finished epoch. Calculating test error..\n",
-      "124.7s:\t test error: 2.231819\n",
-      "saved\t maxent_30batch_19epc.pt\n",
-      "132.1s:\t Finished epoch. Calculating test error..\n",
-      "132.1s:\t test error: 2.229869\n",
-      "saved\t maxent_30batch_20epc.pt\n",
-      "139.3s:\t Finished epoch. Calculating test error..\n",
-      "139.3s:\t test error: 2.228040\n",
-      "saved\t maxent_30batch_21epc.pt\n",
-      "146.3s:\t Finished epoch. Calculating test error..\n",
-      "146.3s:\t test error: 2.226321\n",
-      "saved\t maxent_30batch_22epc.pt\n",
-      "153.2s:\t Finished epoch. Calculating test error..\n",
-      "153.2s:\t test error: 2.224697\n",
-      "saved\t maxent_30batch_23epc.pt\n",
-      "160.1s:\t Finished epoch. Calculating test error..\n",
-      "160.1s:\t test error: 2.223180\n",
-      "saved\t maxent_30batch_24epc.pt\n",
-      "167.4s:\t Finished epoch. Calculating test error..\n",
-      "167.4s:\t test error: 2.221778\n",
-      "saved\t maxent_30batch_25epc.pt\n",
-      "174.4s:\t Finished epoch. Calculating test error..\n",
-      "174.4s:\t test error: 2.220432\n",
-      "saved\t maxent_30batch_26epc.pt\n",
-      "181.5s:\t Finished epoch. Calculating test error..\n",
-      "181.5s:\t test error: 2.219163\n",
-      "saved\t maxent_30batch_27epc.pt\n",
-      "188.9s:\t Finished epoch. Calculating test error..\n",
-      "188.9s:\t test error: 2.217949\n",
-      "saved\t maxent_30batch_28epc.pt\n",
-      "196.0s:\t Finished epoch. Calculating test error..\n",
-      "196.0s:\t test error: 2.216782\n",
-      "saved\t maxent_30batch_29epc.pt\n",
-      "202.6s:\t Finished epoch. Calculating test error..\n",
-      "202.6s:\t test error: 2.215683\n",
-      "saved\t maxent_30batch_30epc.pt\n",
-      "209.4s:\t Finished epoch. Calculating test error..\n",
-      "209.4s:\t test error: 2.214646\n",
-      "saved\t maxent_30batch_31epc.pt\n",
-      "216.1s:\t Finished epoch. Calculating test error..\n",
-      "216.1s:\t test error: 2.213681\n",
-      "saved\t maxent_30batch_32epc.pt\n",
-      "222.8s:\t Finished epoch. Calculating test error..\n",
-      "222.8s:\t test error: 2.212759\n",
-      "saved\t maxent_30batch_33epc.pt\n",
-      "229.5s:\t Finished epoch. Calculating test error..\n",
-      "229.5s:\t test error: 2.211879\n",
-      "saved\t maxent_30batch_34epc.pt\n",
-      "236.2s:\t Finished epoch. Calculating test error..\n",
-      "236.2s:\t test error: 2.211043\n",
-      "saved\t maxent_30batch_35epc.pt\n",
-      "243.2s:\t Finished epoch. Calculating test error..\n",
-      "243.2s:\t test error: 2.210233\n",
-      "saved\t maxent_30batch_36epc.pt\n",
-      "250.5s:\t Finished epoch. Calculating test error..\n",
-      "250.5s:\t test error: 2.209470\n",
-      "saved\t maxent_30batch_37epc.pt\n",
-      "257.1s:\t Finished epoch. Calculating test error..\n",
-      "257.1s:\t test error: 2.208735\n",
-      "saved\t maxent_30batch_38epc.pt\n",
-      "264.1s:\t Finished epoch. Calculating test error..\n",
-      "264.1s:\t test error: 2.208045\n",
-      "saved\t maxent_30batch_39epc.pt\n",
-      "270.8s:\t Finished epoch. Calculating test error..\n",
-      "270.8s:\t test error: 2.207395\n",
-      "saved\t maxent_30batch_40epc.pt\n",
-      "277.6s:\t Finished epoch. Calculating test error..\n",
-      "277.6s:\t test error: 2.206769\n",
-      "saved\t maxent_30batch_41epc.pt\n",
-      "284.7s:\t Finished epoch. Calculating test error..\n",
-      "284.7s:\t test error: 2.206122\n",
-      "saved\t maxent_30batch_42epc.pt\n",
-      "291.1s:\t Finished epoch. Calculating test error..\n",
-      "291.1s:\t test error: 2.205495\n",
-      "saved\t maxent_30batch_43epc.pt\n",
-      "298.0s:\t Finished epoch. Calculating test error..\n",
-      "298.0s:\t test error: 2.204905\n",
-      "saved\t maxent_30batch_44epc.pt\n",
-      "304.7s:\t Finished epoch. Calculating test error..\n",
-      "304.7s:\t test error: 2.204329\n",
-      "saved\t maxent_30batch_45epc.pt\n",
-      "311.8s:\t Finished epoch. Calculating test error..\n",
-      "311.8s:\t test error: 2.203788\n",
-      "saved\t maxent_30batch_46epc.pt\n",
-      "41413.6s:\t Finished epoch. Calculating test error..\n",
-      "41413.6s:\t test error: 2.203294\n",
-      "saved\t maxent_30batch_47epc.pt\n",
-      "41424s:\t epoch: 46\t batch:18 (56.2%) \t training error: 5.910390\t speed: 0.0 dialogs/s\n",
-      "41439.7s:\t Finished epoch. Calculating test error..\n",
-      "41439.7s:\t test error: 2.202804\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batchSize = 30\n",
     "numEpochs = 100\n",
-    "learningRate = 1e-5\n",
+    "learningRate = 1e-3\n",
     "criterion = nn.NLLLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learningRate)\n",
     "\n",
@@ -682,7 +512,7 @@
     "        \n",
     "        predictions = model(inputs, batchSize)\n",
     "        \n",
-    "        loss = criterion(predictions.view(batchSize, -1), targets)\n",
+    "        loss = criterion(predictions, targets)\n",
     "        training_errors.append(loss.data[0])\n",
     "        total_loss += loss.data[0]\n",
     "        \n",
@@ -690,7 +520,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        if time.time()  - lastPrintTime > 10:\n",
+    "        if time.time()  - lastPrintTime > 3:\n",
     "            log_to_console(i, t, batchSize, batchCountPerEpc, total_loss / i, startTime)\n",
     "            lastPrintTime = time.time()\n",
     "    \n",
@@ -709,6 +539,12 @@
     "    fileName = \"maxent_{}batch_{}epc.pt\".format(batchSize, epochsTrained)\n",
     "    torch.save(model.state_dict(), fileName)\n",
     "    print(\"saved\\t\", fileName)\n",
+    "\n",
+    "for i in range(batchSize):\n",
+    "    dialog, image, target = dialog_data[i]\n",
+    "    inputs = model.prepare(dialog, image)\n",
+    "    pred = model(Variable(inputs))\n",
+    "    print(pred)\n",
     "\n",
     "if logging == True:\n",
     "    stats_log.close()"
