--- a/dataloader_cbow.ipynb
+++ b/dataloader_cbow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
     "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
@@ -194,8 +186,8 @@
     "        return Variable(inputs), Variable(targets)\n",
     "        \n",
     "    def forward(self, inp, batchSize=1):\n",
-    "        scores = self.linear(inp)\n",
-    "        scores = self.softmax(scores.transpose(0, 1))\n",
+    "        scores = self.linear(inp).view(batchSize, -1)\n",
+    "        scores = self.softmax(scores)\n",
     "        return scores"
    ]
   },
@@ -427,7 +419,7 @@
     "        \n",
     "        predictions = model(inputs, batchSize)\n",
     "        \n",
-    "        loss = criterion(predictions.view(batchSize, -1), targets)\n",
+    "        loss = criterion(predictions, targets)\n",
     "        training_errors.append(loss.data[0])\n",
     "        total_loss += loss.data[0]\n",
     "        \n",
