Fixed some bugs in cbow_preprocessing

--- a/cbow_preprocessing.ipynb
+++ b/cbow_preprocessing.ipynb
@@ -104,7 +104,7 @@
     "from torch.autograd import Variable\n",
     "from pathlib import Path\n",
     "import time\n",
-    "\n",
+    "from timeit import default_timer as timer\n",
     "\n",
     "import sys\n",
     "import pprint\n",
@@ -258,7 +258,7 @@
     "torch.manual_seed(1)\n",
     "# dialog_data = DialogDataset(os.path.join(*SAMPLE_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "dialog_data = DialogDataset(os.path.join(*TRAIN_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
-    "valid_data = DialogDataset(os.path.join(*VAL_200), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
+    "valid_data = DialogDataset(os.path.join(*VALID_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "\n",
     "vocab_size = len(dialog_data.vocab)\n",
     "print(len(dialog_data[0:3])) # can now slice this bitch up"
@@ -333,8 +333,8 @@
     "        targets = torch.cat(targets)\n",
     "        return Variable(inputs), Variable(targets)\n",
     "        \n",
-    "    def forward(self, inp, batchSize=1):\n",
-    "        scores = self.linear(inp).view(batchSize, -1)\n",
+    "    def forward(self, inp, batch_size=1):\n",
+    "        scores = self.linear(inp).view(batch_size, -1)\n",
     "        scores = self.softmax(scores)\n",
     "        return scores"
    ]
@@ -360,7 +360,7 @@
     "    \n",
     "training_errors = []\n",
     "validation_errors = []\n",
-    "epochsTrained = 0"
+    "epochs_trained = 0"
    ]
   },
   {
@@ -401,7 +401,7 @@
     "            correct_top1 += 1\n",
     "        \n",
     "        # For top 5:\n",
-    "        pred = pred.data.numpy().flatten()\n",
+    "        pred = pred.data.cpu().numpy().flatten()\n",
     "        top_5 = heapq.nlargest(5, range(len(pred)), pred.__getitem__)\n",
     "        if target.data[0] in top_5:\n",
     "            correct_top5 += 1\n",
@@ -417,16 +417,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_to_console(i, n_epochs, batch_size, batch_per_epoch, error, start_time):\n",
-    "    avgProcessingSpeed = (i*batch_size) / (time.time() - start_time)\n",
+    "def log_to_console(i, n_epochs, batch_size, batch_per_epoch, error, start_time, processing_speed):\n",
     "    percentOfEpc = (i / batch_per_epoch) * 100\n",
     "    print(\"{:.0f}s:\\t epoch: {}\\t batch:{} ({:.1f}%) \\t training error: {:.6f}\\t speed: {:.1f} dialogs/s\"\n",
-    "          .format(time.time() - start_time, \n",
+    "          .format(timer() - start_time, \n",
     "                  n_epochs, \n",
     "                  i, \n",
     "                  percentOfEpc, \n",
     "                  error, \n",
-    "                  avgProcessingSpeed))\n",
+    "                  processing_speed))\n",
     "    \n",
     "def init_stats_log(label, training_portion, validation_portion, embeddings_dim, epochs, batch_count):\n",
     "    timestr = time.strftime(\"%m-%d-%H-%M\")\n",
@@ -453,21 +452,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batchSize = 30\n",
+    "batch_size = 30\n",
     "numEpochs = 100\n",
     "learningRate = 1e-3\n",
     "criterion = nn.NLLLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learningRate)\n",
     "\n",
-    "startTime = time.time()\n",
-    "lastPrintTime = startTime\n",
+    "start_time = timer()\n",
+    "lastPrintTime = start_time\n",
     "\n",
     "continueFromEpc = 0\n",
     "continueFromI = 0\n",
     "sampleCount = len(dialog_data)\n",
-    "batchCountPerEpc = int(sampleCount/batchSize)-1\n",
-    "remainderCount = sampleCount - batchCountPerEpc * batchSize\n",
-    "print(\"we have: {} dialogs, batch size of {} with {} as remainder to offset batches each epoch\".format(sampleCount, batchSize, remainderCount))\n",
+    "batchCountPerEpc = int(sampleCount/batch_size)-1\n",
+    "remainderCount = sampleCount - batchCountPerEpc * batch_size\n",
+    "print(\"we have: {} dialogs, batch size of {} with {} as remainder to offset batches each epoch\".format(sampleCount, batch_size, remainderCount))\n",
     "offset = 0\n",
     "\n",
     "logging = True\n",
@@ -481,15 +480,15 @@
     "                               validation_portion,\n",
     "                               EMBEDDING_DIM,\n",
     "                               numEpochs,\n",
-    "                               batchSize)\n",
+    "                               batch_size)\n",
     "\n",
     "else:\n",
     "    print(\"Logging disabled!\")\n",
     "    filename = \"\"\n",
     "\n",
     "for t in range(numEpochs):\n",
-    "    lastPrintTime = time.time()\n",
-    "    epochStartTime = time.time()\n",
+    "    lastPrintTime = timer()\n",
+    "    epoch_start_time = timer()\n",
     "    \n",
     "    total_loss = 0\n",
     "    updates = 0\n",
@@ -502,15 +501,15 @@
     "    for i in range(continueFromI, batchCountPerEpc):\n",
     "        \n",
     "        # In case of RNN, clear hidden state\n",
-    "        #model.hidden = steerNet.init_hidden(batchSize)\n",
+    "        #model.hidden = steerNet.init_hidden(batch_size)\n",
     "        \n",
-    "        batchBegin = offset + i * batchSize\n",
-    "        batchEnd = batchBegin + batchSize\n",
+    "        batchBegin = offset + i * batch_size\n",
+    "        batchEnd = batchBegin + batch_size\n",
     "        \n",
     "        batch = dialog_data[batchBegin:batchEnd]\n",
     "        inputs, targets = model.prepareBatch(batch)\n",
     "        \n",
-    "        predictions = model(inputs, batchSize)\n",
+    "        predictions = model(inputs, batch_size)\n",
     "        \n",
     "        loss = criterion(predictions, targets)\n",
     "        training_errors.append(loss.data[0])\n",
@@ -520,27 +519,29 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        if time.time()  - lastPrintTime > 3:\n",
-    "            log_to_console(i, t, batchSize, batchCountPerEpc, total_loss / i, startTime)\n",
-    "            lastPrintTime = time.time()\n",
+    "        if timer()  - lastPrintTime > 3:\n",
+    "            processing_speed = (i*batch_size) / (timer() - epoch_start_time)\n",
+    "            log_to_console(i, epochs_trained, batch_size, batchCountPerEpc, total_loss / i, start_time, processing_speed)\n",
+    "            lastPrintTime = timer()\n",
+    "    print(\"{:.1f}s:\\t Finished epoch. Calculating test error..\".format(timer() - start_time))\n",
     "    \n",
     "    avg_loss = total_loss / batchCountPerEpc\n",
     "    top_1_score, top_5_score = predict(model, valid_data)\n",
     "    validation_error = validate(model, valid_data, criterion)\n",
     "    \n",
     "    if logging == True:\n",
-    "        stats_log.write(\"{}|{}|{}|{}|{}|{}\\n\".format(t, avg_loss, total_loss, validation_error, top_1_score, top_5_score))\n",
+    "        stats_log.write(\"{}|{}|{}|{}|{}|{}\\n\".format(epochs_trained, avg_loss, total_loss, validation_error, top_1_score, top_5_score))\n",
     "            \n",
-    "    epochsTrained += 1\n",
+    "    epochs_trained += 1\n",
     "    offset = (offset + 1) % remainderCount\n",
-    "    print(\"{:.1f}s:\\t Finished epoch. Calculating test error..\".format(time.time() - startTime))\n",
-    "    print(\"{:.1f}s:\\t test error: {:.6f}\".format(time.time() - startTime, validation_error))\n",
+    "    print(\"{:.1f}s:\\t test error: {:.6f}\".format(timer() - start_time, validation_error))\n",
     "    continueFromI = 0\n",
-    "    fileName = \"maxent_{}batch_{}epc.pt\".format(batchSize, epochsTrained)\n",
-    "    torch.save(model.state_dict(), fileName)\n",
-    "    print(\"saved\\t\", fileName)\n",
+    "    if epochs_trained % 10 == 0:\n",
+    "        fileName = \"maxent_{}batch_{}epc.pt\".format(batch_size, epochs_trained)\n",
+    "        torch.save(model.state_dict(), fileName)\n",
+    "        print(\"saved\\t\", fileName)\n",
     "\n",
-    "for i in range(batchSize):\n",
+    "for i in range(batch_size):\n",
     "    dialog, image, target = dialog_data[i]\n",
     "    inputs = model.prepare(dialog, image)\n",
     "    pred = model(Variable(inputs))\n",
@@ -623,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2rc1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
