I think image features are stuck somewhere

--- a/dataloader_cbow.ipynb
+++ b/dataloader_cbow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
     "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +174,8 @@
     "        super(MaxEnt, self).__init__()\n",
     "\n",
     "        self.text_module = text_module\n",
-    "        self.linear = nn.Linear(text_dim + img_size, 1)\n",
+    "        self.linear = nn.Linear(text_dim + img_size, 128)\n",
+    "        self.linear2 = nn.Linear(128, 1)\n",
     "        self.softmax = nn.LogSoftmax()\n",
     "        \n",
     "    def prepare (self, dialog, imgFeatures):\n",
@@ -185,15 +194,17 @@
     "        targets = torch.cat(targets)\n",
     "        return Variable(inputs), Variable(targets)\n",
     "        \n",
-    "    def forward(self, inp, batchSize=1):\n",
-    "        scores = self.linear(inp).view(batchSize, -1)\n",
+    "    def forward(self, inp, batch_size=1):\n",
+    "        scores = self.linear(inp)\n",
+    "        scores = F.relu(scores)\n",
+    "        scores = self.linear2(scores).view(batch_size, -1)\n",
     "        scores = self.softmax(scores)\n",
     "        return scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -225,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.705222536958754"
+       "4.202276769131422"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +287,7 @@
     "        top_5 = heapq.nlargest(5, range(len(pred)), pred.__getitem__)\n",
     "        if target.data[0] in top_5:\n",
     "            correct_top5 += 1\n",
-    "    \n",
+    "            \n",
     "    return correct_top1 / len(data), correct_top5 / len(data)\n",
     "\n",
     "validate(model, valid_data[:100], nn.NLLLoss())"
@@ -284,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,15 +310,16 @@
     "                  error, \n",
     "                  avgProcessingSpeed))\n",
     "    \n",
-    "def init_stats_log(label, training_portion, validation_portion, embeddings_dim, epochs, batch_count):\n",
+    "def init_stats_log(label, training_portion, validation_portion, embeddings_dim, epochs, batch_count, learning_rate):\n",
     "    timestr = time.strftime(\"%m-%d-%H-%M\")\n",
-    "    filename = \"{}-t_size_{}-v_size_{}-emb_{}-eps_{}-dt_{}-batch_{}.txt\".format(label,\n",
+    "    filename = \"{}-t_size_{}-v_size_{}-emb_{}-eps_{}-dt_{}-batch_{}-lr_{}.txt\".format(label,\n",
     "                                                                       training_portion,\n",
     "                                                                       validation_portion,\n",
     "                                                                       EMBEDDING_DIM,\n",
     "                                                                       epochs,\n",
     "                                                                       timestr,\n",
-    "                                                                       batch_count)\n",
+    "                                                                       batch_count,\n",
+    "                                                                       learning_rate)\n",
     "\n",
     "    target_path = ['Training_recordings', filename]\n",
     "    stats_log = open(os.path.join(*target_path), 'w')\n",
@@ -320,49 +332,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we have: 40000 dialogs, batch size of 30 with 40 as remainder to offset batches each epoch\n",
-      "Logging enabled in: test_top1_top2-t_size_40000-v_size_5000-emb_50-eps_100-dt_12-15-22-42-batch_30.txt\n",
-      "10s:\t epoch: 0\t batch:57 (4.3%) \t training error: 15.043881\t speed: 170.1 dialogs/s\n",
-      "20s:\t epoch: 0\t batch:115 (8.6%) \t training error: 15.325217\t speed: 171.9 dialogs/s\n",
-      "30s:\t epoch: 0\t batch:181 (13.6%) \t training error: 15.229888\t speed: 180.4 dialogs/s\n",
-      "40s:\t epoch: 0\t batch:244 (18.3%) \t training error: 15.207059\t speed: 181.1 dialogs/s\n",
-      "51s:\t epoch: 0\t batch:306 (23.0%) \t training error: 15.266142\t speed: 181.8 dialogs/s\n",
-      "61s:\t epoch: 0\t batch:368 (27.6%) \t training error: 15.273058\t speed: 182.4 dialogs/s\n",
-      "71s:\t epoch: 0\t batch:429 (32.2%) \t training error: 15.153103\t speed: 182.4 dialogs/s\n",
-      "81s:\t epoch: 0\t batch:489 (36.7%) \t training error: 15.206864\t speed: 182.0 dialogs/s\n",
-      "91s:\t epoch: 0\t batch:551 (41.4%) \t training error: 15.178892\t speed: 182.4 dialogs/s\n",
-      "101s:\t epoch: 0\t batch:610 (45.8%) \t training error: 15.202682\t speed: 181.8 dialogs/s\n",
-      "111s:\t epoch: 0\t batch:667 (50.1%) \t training error: 15.276329\t speed: 180.7 dialogs/s\n",
-      "121s:\t epoch: 0\t batch:723 (54.3%) \t training error: 15.289291\t speed: 179.6 dialogs/s\n",
-      "131s:\t epoch: 0\t batch:781 (58.6%) \t training error: 15.303136\t speed: 179.1 dialogs/s\n",
-      "141s:\t epoch: 0\t batch:840 (63.1%) \t training error: 15.328660\t speed: 178.9 dialogs/s\n",
-      "151s:\t epoch: 0\t batch:900 (67.6%) \t training error: 15.384513\t speed: 178.9 dialogs/s\n",
-      "161s:\t epoch: 0\t batch:960 (72.1%) \t training error: 15.346280\t speed: 178.8 dialogs/s\n",
-      "171s:\t epoch: 0\t batch:1021 (76.7%) \t training error: 15.311938\t speed: 178.9 dialogs/s\n",
-      "181s:\t epoch: 0\t batch:1078 (80.9%) \t training error: 15.294936\t speed: 178.4 dialogs/s\n",
-      "191s:\t epoch: 0\t batch:1138 (85.4%) \t training error: 15.292888\t speed: 178.5 dialogs/s\n",
-      "201s:\t epoch: 0\t batch:1182 (88.7%) \t training error: 15.309942\t speed: 176.0 dialogs/s\n",
-      "212s:\t epoch: 0\t batch:1229 (92.3%) \t training error: 15.279548\t speed: 174.3 dialogs/s\n",
-      "222s:\t epoch: 0\t batch:1277 (95.9%) \t training error: 15.245029\t speed: 172.9 dialogs/s\n",
-      "232s:\t epoch: 0\t batch:1323 (99.3%) \t training error: 15.192968\t speed: 171.1 dialogs/s\n",
-      "15.176347052370822\n",
-      "320.5s:\t Finished epoch. Calculating test error..\n",
-      "320.5s:\t test error: 4.255885\n",
-      "saved\t maxent_30batch_2epc.pt\n"
+      "we have: 40000 dialogs, batch size of 10 with 10 as remainder to offset batches each epoch\n",
+      "Logging enabled in: naive_cbow-t_size_40000-v_size_5000-emb_50-eps_25-dt_12-16-22-11-batch_10-lr_0.0001.txt\n",
+      "10s:\t epoch: 0\t batch:132 (3.3%) \t training error: 1.133313\t speed: 131.8 dialogs/s\n",
+      "20s:\t epoch: 0\t batch:272 (6.8%) \t training error: 1.156577\t speed: 135.6 dialogs/s\n",
+      "30s:\t epoch: 0\t batch:393 (9.8%) \t training error: 1.170070\t speed: 130.5 dialogs/s\n",
+      "40s:\t epoch: 0\t batch:502 (12.6%) \t training error: 1.176144\t speed: 125.0 dialogs/s\n",
+      "50s:\t epoch: 0\t batch:626 (15.7%) \t training error: 1.182811\t speed: 124.8 dialogs/s\n",
+      "60s:\t epoch: 0\t batch:757 (18.9%) \t training error: 1.176300\t speed: 125.7 dialogs/s\n",
+      "70s:\t epoch: 0\t batch:898 (22.5%) \t training error: 1.171620\t speed: 127.8 dialogs/s\n",
+      "80s:\t epoch: 0\t batch:1040 (26.0%) \t training error: 1.176019\t speed: 129.6 dialogs/s\n",
+      "90s:\t epoch: 0\t batch:1173 (29.3%) \t training error: 1.169052\t speed: 129.9 dialogs/s\n",
+      "100s:\t epoch: 0\t batch:1313 (32.8%) \t training error: 1.167935\t speed: 130.8 dialogs/s\n",
+      "110s:\t epoch: 0\t batch:1423 (35.6%) \t training error: 1.167989\t speed: 128.9 dialogs/s\n",
+      "120s:\t epoch: 0\t batch:1550 (38.8%) \t training error: 1.165195\t speed: 128.7 dialogs/s\n",
+      "130s:\t epoch: 0\t batch:1681 (42.0%) \t training error: 1.160856\t speed: 128.8 dialogs/s\n",
+      "141s:\t epoch: 0\t batch:1807 (45.2%) \t training error: 1.157030\t speed: 128.6 dialogs/s\n",
+      "151s:\t epoch: 0\t batch:1940 (48.5%) \t training error: 1.153654\t speed: 128.9 dialogs/s\n",
+      "161s:\t epoch: 0\t batch:2083 (52.1%) \t training error: 1.150801\t speed: 129.7 dialogs/s\n",
+      "171s:\t epoch: 0\t batch:2213 (55.3%) \t training error: 1.150222\t speed: 129.7 dialogs/s\n",
+      "181s:\t epoch: 0\t batch:2320 (58.0%) \t training error: 1.146789\t speed: 128.4 dialogs/s\n",
+      "191s:\t epoch: 0\t batch:2414 (60.4%) \t training error: 1.146240\t speed: 126.6 dialogs/s\n",
+      "201s:\t epoch: 0\t batch:2523 (63.1%) \t training error: 1.145264\t speed: 125.7 dialogs/s\n",
+      "211s:\t epoch: 0\t batch:2615 (65.4%) \t training error: 1.144999\t speed: 124.1 dialogs/s\n",
+      "221s:\t epoch: 0\t batch:2704 (67.6%) \t training error: 1.146677\t speed: 122.5 dialogs/s\n",
+      "231s:\t epoch: 0\t batch:2810 (70.3%) \t training error: 1.147222\t speed: 121.7 dialogs/s\n",
+      "241s:\t epoch: 0\t batch:2925 (73.1%) \t training error: 1.149110\t speed: 121.4 dialogs/s\n",
+      "251s:\t epoch: 0\t batch:3048 (76.2%) \t training error: 1.149416\t speed: 121.5 dialogs/s\n",
+      "261s:\t epoch: 0\t batch:3171 (79.3%) \t training error: 1.150709\t speed: 121.5 dialogs/s\n",
+      "271s:\t epoch: 0\t batch:3309 (82.7%) \t training error: 1.149858\t speed: 122.2 dialogs/s\n",
+      "281s:\t epoch: 0\t batch:3451 (86.3%) \t training error: 1.149615\t speed: 122.9 dialogs/s\n",
+      "291s:\t epoch: 0\t batch:3592 (89.8%) \t training error: 1.148576\t speed: 123.5 dialogs/s\n",
+      "301s:\t epoch: 0\t batch:3732 (93.3%) \t training error: 1.147653\t speed: 124.0 dialogs/s\n",
+      "311s:\t epoch: 0\t batch:3874 (96.9%) \t training error: 1.147910\t speed: 124.6 dialogs/s\n",
+      "319.8s:\t Finished epoch. Calculating test error..\n",
+      "\n",
+      "<--------------->\n",
+      "395.2s:\t top-1: \t 0.11 \t top-5: \t 0.44 \t test error: 4.011630\n",
+      "<--------------->\n",
+      "\n",
+      "405s:\t epoch: 1\t batch:129 (3.2%) \t training error: 1.039017\t speed: 3.2 dialogs/s\n",
+      "415s:\t epoch: 1\t batch:271 (6.8%) \t training error: 1.044413\t speed: 6.5 dialogs/s\n",
+      "425s:\t epoch: 1\t batch:415 (10.4%) \t training error: 1.055330\t speed: 9.8 dialogs/s\n",
+      "435s:\t epoch: 1\t batch:561 (14.0%) \t training error: 1.062587\t speed: 12.9 dialogs/s\n",
+      "445s:\t epoch: 1\t batch:708 (17.7%) \t training error: 1.061554\t speed: 15.9 dialogs/s\n",
+      "455s:\t epoch: 1\t batch:843 (21.1%) \t training error: 1.060026\t speed: 18.5 dialogs/s\n",
+      "465s:\t epoch: 1\t batch:983 (24.6%) \t training error: 1.058756\t speed: 21.1 dialogs/s\n"
      ]
     }
    ],
    "source": [
-    "batchSize = 30\n",
-    "numEpochs = 100\n",
-    "learningRate = 1e-5\n",
+    "batchSize = 10\n",
+    "numEpochs = 25\n",
+    "learningRate = 1e-4\n",
     "criterion = nn.NLLLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learningRate)\n",
     "\n",
@@ -383,12 +412,13 @@
     "validation_portion = len(valid_data)\n",
     "\n",
     "if logging == True:\n",
-    "    stats_log, filename = init_stats_log(\"test_top1_top2\", \n",
+    "    stats_log, filename = init_stats_log(\"naive_cbow\", \n",
     "                               training_portion,\n",
     "                               validation_portion,\n",
     "                               EMBEDDING_DIM,\n",
     "                               numEpochs,\n",
-    "                               batchSize)\n",
+    "                               batchSize,\n",
+    "                               learningRate)\n",
     "\n",
     "else:\n",
     "    print(\"Logging disabled!\")\n",
@@ -430,25 +460,24 @@
     "        if time.time()  - lastPrintTime > 10:\n",
     "            log_to_console(i, t, batchSize, batchCountPerEpc, total_loss / i, startTime)\n",
     "            lastPrintTime = time.time()\n",
+    "            \n",
+    "    print(\"{:.1f}s:\\t Finished epoch. Calculating test error..\".format(time.time() - startTime))\n",
     "    \n",
     "    avg_loss = total_loss / batchCountPerEpc\n",
     "    top_1_score, top_5_score = predict(model, valid_data)\n",
     "    validation_error = validate(model, valid_data, criterion)\n",
     "    \n",
-    "    print(avg_loss)\n",
     "    if logging == True:\n",
     "        stats_log.write(\"{}|{}|{}|{}|{}|{}\\n\".format(t, avg_loss, total_loss, validation_error, top_1_score, top_5_score))\n",
     "            \n",
     "    epochsTrained += 1\n",
     "    offset = (offset + 1) % remainderCount\n",
-    "    print(\"{:.1f}s:\\t Finished epoch. Calculating test error..\".format(time.time() - startTime))\n",
-    "    print(\"{:.1f}s:\\t test error: {:.6f}\".format(time.time() - startTime, validation_error))\n",
+    "    print()\n",
+    "    print(\"<--------------->\")\n",
+    "    print(\"{:.1f}s:\\t top-1: \\t {:.2f} \\t top-5: \\t {:.2f} \\t test error: {:.6f}\".format(time.time() - startTime, top_1_score, top_5_score, validation_error))\n",
+    "    print(\"<--------------->\")\n",
+    "    print()\n",
     "    continueFromI = 0\n",
-    "    fileName = \"maxent_{}batch_{}epc.pt\".format(batchSize, epochsTrained)\n",
-    "    torch.save(model.state_dict(), fileName)\n",
-    "    print(\"saved\\t\", fileName)\n",
-    "    \n",
-    "    break\n",
     "\n",
     "if logging == True:\n",
     "    stats_log.close()"
