--- a/dataloader_mn.ipynb
+++ b/dataloader_mn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from torch.autograd import Variable\n",
     "from pathlib import Path\n",
     "import time\n",
+    "from timeit import default_timer as timer\n",
     "\n",
     "import sys\n",
     "import pprint\n",
@@ -72,6 +73,15 @@
     "        return len(self.json_data)\n",
     "\n",
     "    def __getitem__(self, key):\n",
+    "        if isinstance(key, slice):\n",
+    "            #Get the start, stop, and step from the slice\n",
+    "            return [self[ii] for ii in range(*key.indices(len(self)))]\n",
+    "        elif isinstance(key, int):\n",
+    "            if key < 0 : #Handle negative indices\n",
+    "                key += len( self )\n",
+    "            if key < 0 or key >= len(self) :\n",
+    "                raise IndexError(\"The index ({}) is out of range.\".format(key))\n",
+    "                \n",
     "        item = self.json_data.iloc[key]\n",
     "        \n",
     "        diag = item.dialog\n",
@@ -106,57 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 679,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(\n",
-       " \n",
-       " Columns 0 to 12 \n",
-       "   119  2890   347  1752  3332    85  3757    85  4515  4515  4515  4515  4515\n",
-       "  4003  3332  4004  3757  4003  4515  4515  4515  4515  4515  4515  4515  4515\n",
-       "  1742  3516  1262  3332  4048  3757  1262  4515  4515  4515  4515  4515  4515\n",
-       "  1742  3516  2613  3077  2816  1778  3757  3105  3306  1605   119   347  1838\n",
-       "   119  2816  1778  2895  3332  2642  3757   890   119  2920  4515  4515  4515\n",
-       "  2532   516   119  2816  1838  3757  3920   560   695  4515  4515  4515  4515\n",
-       "  2532   516   119  2816  2920  3757  3473  3920  4515  4515  4515  4515  4515\n",
-       "  2532  1514   119  2816  1042  3757  2327  4515  4515  4515  4515  4515  4515\n",
-       "  1155  2816  1042  3945  4168   560  1817  3757  3436  4515  4515  4515  4515\n",
-       "  2532   516   119  2816  1042  3757  4098  4515  4515  4515  4515  4515  4515\n",
-       "   347   919  1818   119  2613  2941   162   347  1042  4515  4515  4515  4515\n",
-       " \n",
-       " Columns 13 to 18 \n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "   150  1615  1512   560  2816  1778\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       "  4515  4515  4515  4515  4515  4515\n",
-       " [torch.LongTensor of size 11x19], \n",
-       "  0.2271  0.2383  0.4295  ...   1.0665  1.0852  0.3636\n",
-       "  0.1314  0.2542  1.7184  ...   0.5293  0.7909  0.1379\n",
-       "  0.2266  0.1438  1.9781  ...   0.2134  0.0481  0.0479\n",
-       "           ...             ⋱             ...          \n",
-       "  0.0050  0.3181  1.8139  ...   0.1029  0.6153  0.2048\n",
-       "  2.5743  0.2204  1.0295  ...   0.0671  0.1832  0.1447\n",
-       "  3.5460  0.1536  0.8659  ...   0.2847  0.3697  0.5222\n",
-       " [torch.FloatTensor of size 10x2048], \n",
-       "  7\n",
-       " [torch.LongTensor of size 1])"
-      ]
-     },
-     "execution_count": 252,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
     "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
@@ -174,13 +136,12 @@
     "dialog_data = DialogDataset(os.path.join(*EASY_1000), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "valid_data = DialogDataset(os.path.join(*VAL_200), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "\n",
-    "vocab_size = len(dialog_data.vocab)\n",
-    "dialog_data[0]"
+    "vocab_size = len(dialog_data.vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +278,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 706,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no no\n"
+     ]
+    }
+   ],
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    print(\"ya ya\")\n",
+    "    cbow_model = cbow_model.cuda()\n",
+    "    mem_net = mem_net.cuda()\n",
+    "    print(\"cuda ready bitches\")\n",
+    "else:\n",
+    "    print(\"no no\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 684,
    "metadata": {
     "scrolled": false
    },
@@ -327,43 +311,43 @@
      "output_type": "stream",
      "text": [
       "Variable containing:\n",
-      " 0.1789\n",
+      "-1.1192\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 0.5002\n",
+      "-0.3388\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 0.4498\n",
+      " 0.6739\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 0.3154\n",
+      " 0.9252\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 0.1744\n",
+      " 0.5084\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      "-2.6919\n",
+      " 0.6745\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 0.3422\n",
+      " 1.2070\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 0.4280\n",
+      "-0.6033\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 0.4872\n",
+      " 0.1976\n",
       "[torch.FloatTensor of size 1]\n",
       "\n",
       "Variable containing:\n",
-      " 1.8808\n",
+      " 1.1863\n",
       "[torch.FloatTensor of size 1]\n",
       "\n"
      ]
@@ -440,15 +424,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.95 ms, sys: 1.13 ms, total: 5.08 ms\n",
-      "Wall time: 5.46 ms\n",
+      "CPU times: user 3.28 ms, sys: 2.17 ms, total: 5.45 ms\n",
+      "Wall time: 6.45 ms\n",
       "\n",
       "Should be one:\n",
       "\n",
@@ -464,16 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 686,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.0945273631840796, 0.4577114427860697)"
+       "(0.12935323383084577, 0.4925373134328358)"
       ]
      },
-     "execution_count": 653,
+     "execution_count": 686,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +492,7 @@
     "            correct_top1 += 1\n",
     "        \n",
     "        # For top 5:\n",
-    "        pred = pred.data.numpy().flatten()\n",
+    "        pred = pred.data.cpu().numpy().flatten()\n",
     "        top_5 = heapq.nlargest(5, range(len(pred)), pred.__getitem__)\n",
     "        if target.data[0] in top_5:\n",
     "            correct_top5 += 1\n",
@@ -521,20 +505,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_to_console(i, n_epochs, batch_size, batch_per_epoch, errors, start_time):\n",
-    "    avgProcessingSpeed = (i*batch_size) / (time.time() - start_time)\n",
+    "def log_to_console(i, n_epochs, batch_size, batch_per_epoch, error, start_time, processing_speed):\n",
     "    percentOfEpc = (i / batch_per_epoch) * 100\n",
     "    print(\"{:.0f}s:\\t epoch: {}\\t batch:{} ({:.1f}%) \\t training error: {:.6f}\\t speed: {:.1f} dialogs/s\"\n",
-    "          .format(time.time() - start_time, \n",
+    "          .format(timer() - start_time, \n",
     "                  n_epochs, \n",
     "                  i, \n",
     "                  percentOfEpc, \n",
-    "                  np.mean(errors[-100:]), \n",
-    "                  avgProcessingSpeed))\n",
+    "                  error, \n",
+    "                  processing_speed))\n",
     "    \n",
     "def init_stats_log(label, training_portion, validation_portion, embeddings_dim, epochs, batch_count):\n",
     "    timestr = time.strftime(\"%m-%d-%H-%M\")\n",
@@ -557,29 +540,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have: 1000 dialogs, batch size of 1 with 1 as remainder to offset batches each epoch\n",
+      "Logging enabled in: memory_net-t_size_1000-v_size_201-emb_100-eps_5-dt_12-16-20-31-batch_1.txt\n",
+      "0s:\t epoch: 0\t batch:1 (0.1%) \t training error: 64.376702\t speed: 21.1 dialogs/s\n",
+      "2s:\t epoch: 0\t batch:97 (9.7%) \t training error: 63.763405\t speed: 47.0 dialogs/s\n",
+      "4s:\t epoch: 0\t batch:183 (18.3%) \t training error: 65.324112\t speed: 45.0 dialogs/s\n",
+      "6s:\t epoch: 0\t batch:268 (26.8%) \t training error: 63.571802\t speed: 44.0 dialogs/s\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-655-0352125f2fac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlearningRate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNLLLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearningRate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mstartTime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-704-ae28cfe21c25>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0mtotal_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mzero_grad\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    507\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    508\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvolatile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 509\u001b[0;31m                     \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    510\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    511\u001b[0m                     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
+    "model = mem_net\n",
+    "\n",
     "batchSize = 1\n",
     "numEpochs = 5\n",
-    "learningRate = 1e-1\n",
+    "learningRate = 1e-4\n",
     "criterion = nn.NLLLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learningRate)\n",
     "\n",
-    "startTime = time.time()\n",
+    "startTime = timer()\n",
     "lastPrintTime = startTime\n",
     "\n",
     "continueFromEpc = 0\n",
@@ -590,13 +588,13 @@
     "print(\"we have: {} dialogs, batch size of {} with {} as remainder to offset batches each epoch\".format(sampleCount, batchSize, remainderCount))\n",
     "offset = 0\n",
     "\n",
-    "logging = False\n",
+    "logging = True\n",
     "\n",
     "training_portion = len(dialog_data)\n",
     "validation_portion = len(valid_data)\n",
     "\n",
     "if logging == True:\n",
-    "    stats_log, filename = init_stats_log(\"test_top1_top2\", \n",
+    "    stats_log, filename = init_stats_log(\"memory_net\", \n",
     "                               training_portion,\n",
     "                               validation_portion,\n",
     "                               EMBEDDING_DIM,\n",
@@ -608,8 +606,8 @@
     "    filename = \"\"\n",
     "\n",
     "for t in range(numEpochs):\n",
-    "    lastPrintTime = time.time()\n",
-    "    epochStartTime = time.time()\n",
+    "    lastPrintTime = timer()\n",
+    "    epoch_start_time = timer()\n",
     "    \n",
     "    total_loss = 0\n",
     "    \n",
@@ -621,20 +619,20 @@
     "        batchBegin = offset + i * batchSize\n",
     "        batchEnd = batchBegin + batchSize\n",
     "        \n",
-    "        dialog, images, target = dialog_data[batchBegin:batchEnd]\n",
+    "        dialog, images, targets = dialog_data[batchBegin:batchEnd][0]\n",
     "        \n",
     "        predictions = model(Variable(dialog), Variable(images))\n",
     "        \n",
-    "        loss = criterion(predictions.view(batchSize, -1), targets)\n",
-    "        training_errors.append(loss.data[0])\n",
+    "        loss = criterion(predictions.view(batchSize, -1), Variable(targets))\n",
     "        total_loss += loss.data[0]\n",
     "        \n",
     "        model.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        if time.time()  - lastPrintTime > 10:\n",
-    "            log_to_console(i, t, batchSize, batchCountPerEpc, training_errors, startTime)\n",
+    "        if time.time()  - lastPrintTime > 2 and i is not 0:\n",
+    "            processing_speed = (i*batchSize) / (timer() - epoch_start_time)\n",
+    "            log_to_console(i, t, batchSize, batchCountPerEpc, total_loss / i, startTime, processing_speed)\n",
     "            lastPrintTime = time.time()\n",
     "    \n",
     "    avg_loss = total_loss / training_portion\n",
@@ -644,14 +642,10 @@
     "    if logging == True:\n",
     "        stats_log.write(\"{}|{}|{}|{}|{}|{}\\n\".format(epoch, avg_loss, total_loss, validation_error, top_1_score, top_5_score))\n",
     "            \n",
-    "    epochsTrained += 1\n",
     "    offset = (offset + 1) % remainderCount\n",
-    "    print(\"{:.1f}s:\\t Finished epoch. Calculating test error..\".format(time.time() - startTime))\n",
-    "    print(\"{:.1f}s:\\t test error: {:.6f}\".format(time.time() - startTime, validation_error))\n",
+    "    print(\"{:.1f}s:\\t Finished epoch. Calculating test error..\".format(timer() - startTime))\n",
+    "    print(\"{:.1f}s:\\t test error: {:.6f}\".format(timer() - startTime, validation_error))\n",
     "    continueFromI = 0\n",
-    "    fileName = \"maxent_{}batch_{}epc.pt\".format(batchSize, epochsTrained)\n",
-    "    torch.save(model.state_dict(), fileName)\n",
-    "    print(\"saved\\t\", fileName)\n",
     "\n",
     "if logging == True:\n",
     "    stats_log.close()"
